--- a/package.json
+++ b/package.json
@@ -9,13 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@flyerhq/react-native-keyboard-accessory-view": "^2.4.0",
+    "@good-react-native/keyboard-avoider": "^1.1.4",
+    "@morrowdigital/watermelondb-expo-plugin": "^2.3.0",
+    "@nozbe/watermelondb": "^0.27.1",
+    "@nozbe/with-observables": "^1.6.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.39.3",
     "expo": "~50.0.1",
+    "expo-build-properties": "~0.11.0",
+    "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-hook-form": "^7.49.3",
+    "react-native": "0.73.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-keyboard-accessory": "^0.1.16",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-pager-view": "6.2.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-wheel-pick": "^1.2.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
